--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           sudo apt update
           sudo apt purge firefox -y
           sudo apt upgrade
-          sudo apt install wget build-essential bison flex pkg-config qtcreator qtbase5-dev qt5-qmake qttools5-dev-tools libssl-dev libncurses-dev git libelf-dev elfutils -y
+          sudo apt install wget gcc-13 g++-13 build-essential lz4 zstd bison flex pkg-config qtcreator qtbase5-dev qt5-qmake qttools5-dev-tools libssl-dev libncurses-dev git libelf-dev elfutils -y
           
       - name: Setup Clang/LLVM
         run: |    
@@ -51,7 +51,7 @@ jobs:
         run: |
           cp config kernel/xanmod/.config
           cd kernel/xanmod
-          make clean
+          make distclean
           rm -rf vmlinux-gdb.py
           export LLVM_SUFFIX=-${{ github.event.inputs.LLVM_VER }}
           make CC=clang${LLVM_SUFFIX} LLVM=1 LLVM_IAS=1 LLVM_SUFFIX=-${{ github.event.inputs.LLVM_VER }} LOCALVERSION=-xanmod-${{ github.event.inputs.KERNEL_VER }}-clang-${{ github.event.inputs.LLVM_VER }} deb-pkg -j$(nproc)
