--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           cp config kernel/xanmod/.config
           cd kernel/xanmod
-          make distclean
+          make clean
           rm -rf vmlinux-gdb.py
           export LLVM_SUFFIX=-${{ github.event.inputs.LLVM_VER }}
           make CC=clang${LLVM_SUFFIX} LLVM=1 LLVM_IAS=1 LLVM_SUFFIX=-${{ github.event.inputs.LLVM_VER }} LOCALVERSION=-xanmod-${{ github.event.inputs.KERNEL_VER }}-clang-${{ github.event.inputs.LLVM_VER }} deb-pkg -j$(nproc)
