--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
             LLVM_IAS=1 \
             LLVM_SUFFIX=-${{ github.event.inputs.LLVM_VER }} \
             LOCALVERSION=-xanmod-${{ github.event.inputs.KERNEL_VER }}-clang-${{ github.event.inputs.LLVM_VER }} \
-            config_x86-64-{{ matrix.config }}
+            config_x86-64-${{ matrix.config }}
             
           make \
             CC=clang${LLVM_SUFFIX} \
@@ -98,6 +98,6 @@ jobs:
       - name: Upload-Kernel
         uses: actions/upload-artifact@v4
         with:
-          name: Xanmod-${{ github.event.inputs.KERNEL_VER }}-${{ github.event.inputs.LLVM_VER }}-config_x86-64-{{ matrix.config }}
+          name: Xanmod-${{ github.event.inputs.KERNEL_VER }}-${{ github.event.inputs.LLVM_VER }}-config_x86-64-${{ matrix.config }}
           path: kernel/
           compression-level: 9
