--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,11 @@ jobs:
     name: "🚧 Build Xanmod for x86-64-${{matrix.config}}"
 
     steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+          
       - name: Install packages & setup
         run: |
           sudo apt update
