--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
+       
+      - name: Cleanup
+        uses: rokibhasansagar/slimhub_actions@main
           
       - name: Install packages & setup
         run: |
@@ -42,6 +45,8 @@ jobs:
             build-essential \
             bison \
             flex \
+            gcc \
+            g++ \
             pkg-config \
             qtcreator \
             qtbase5-dev \
