--- a/.github/workflows/build_generic.yml
+++ b/.github/workflows/build_generic.yml
@@ -30,7 +30,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-          
+
+      - name: Cleanup
+        uses: rokibhasansagar/slimhub_actions@main
+              
       - name: Install packages & setup
         run: |
           sudo apt update
