--- a/config
+++ b/config
@@ -1062,7 +1062,7 @@ CONFIG_SLAB_MERGE_DEFAULT=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 # CONFIG_SLUB_STATS is not set
-CONFIG_SLUB_CPU_PARTIAL=y
+# CONFIG_SLUB_CPU_PARTIAL is not set
 CONFIG_RANDOM_KMALLOC_CACHES=y
 # end of SLAB allocator options
 
