--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,7 @@ jobs:
           cd ..
           cp xanmod/.config config
           rm -rf xanmod *.gz *.dsc *.buildinfo *.changes 
-          tar czvf Xanmod-${{ github.event.inputs.KERNEL_VER }}-${{ github.event.inputs.LLVM_VER }}.tar.gz *.deb
+          tar -cf - *.deb | zstd > Xanmod-${{ github.event.inputs.KERNEL_VER }}-${{ github.event.inputs.LLVM_VER }}.tar.zst
 
       - name: Upload-Kernel
         uses: actions/upload-artifact@v4
@@ -90,11 +90,3 @@ jobs:
           name: Xanmod-${{ github.event.inputs.KERNEL_VER }}-${{ github.event.inputs.LLVM_VER }}-nongenric
           path: kernel/
           compression-level: 0
-
-      - name: Upload to Telegram
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_CHAT_ID }}
-          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          document: kernel/Xanmod*.gz
-          message: "Xanmod-Generic-${{ github.event.inputs.KERNEL_VER }} clang-${{ github.event.inputs.LLVM_VER }} Completed"
