--- a/.github/workflows/build_generic.yml
+++ b/.github/workflows/build_generic.yml
@@ -33,7 +33,12 @@ jobs:
 
       - name: Cleanup
         uses: rokibhasansagar/slimhub_actions@main
-              
+
+      - name: Environment Variables
+        run: |
+          echo 'LLVM_VER   == > ${{ github.event.inputs.LLVM_VER }}'
+          echo 'KERNEL_VER == > ${{ github.event.inputs.KERNEL_VER }}'
+                 
       - name: Install packages & setup
         run: |
           sudo apt update
