--- a/kernel.config
+++ b/kernel.config
@@ -1,6 +1,8 @@
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_NETFILTER=y
 CONFIG_OVERLAY_FS=y
+CONFIG_FUSE_FS=y
+CONFIG_CUSE=y
 CONFIG_IP_NF_NAT=y
 CONFIG_NF_NAT=y
 CONFIG_NF_CONNTRACK=y
