--- a/config
+++ b/config
@@ -1119,7 +1119,9 @@ CONFIG_ZSWAP_ZPOOL_DEFAULT_Z3FOLD=y
 CONFIG_ZSWAP_ZPOOL_DEFAULT="z3fold"
 # CONFIG_ZBUD is not set
 CONFIG_Z3FOLD=y
-# CONFIG_ZSMALLOC is not set
+CONFIG_ZSMALLOC=y
+# CONFIG_ZSMALLOC_STAT is not set
+CONFIG_ZSMALLOC_CHAIN_SIZE=8
 
 #
 # Slab allocator options
@@ -2029,7 +2031,16 @@ CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_FD is not set
 CONFIG_CDROM=y
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-# CONFIG_ZRAM is not set
+CONFIG_ZRAM=y
+# CONFIG_ZRAM_DEF_COMP_LZORLE is not set
+# CONFIG_ZRAM_DEF_COMP_ZSTD is not set
+CONFIG_ZRAM_DEF_COMP_LZ4=y
+# CONFIG_ZRAM_DEF_COMP_LZO is not set
+CONFIG_ZRAM_DEF_COMP="lz4"
+CONFIG_ZRAM_WRITEBACK=y
+# CONFIG_ZRAM_TRACK_ENTRY_ACTIME is not set
+# CONFIG_ZRAM_MEMORY_TRACKING is not set
+# CONFIG_ZRAM_MULTI_COMP is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # CONFIG_BLK_DEV_DRBD is not set
