--- a/.github/workflows/build_generic.yml
+++ b/.github/workflows/build_generic.yml
@@ -32,6 +32,9 @@ jobs:
         run: |
           echo 'LLVM_VER   == > ${{ github.event.inputs.LLVM_VER }}'
           echo 'KERNEL_VER == > ${{ github.event.inputs.KERNEL_VER }}'
+
+      - name: Cleanup
+        uses: rokibhasansagar/slimhub_actions@main
                  
       - name: Install packages & setup
         run: |
